--- a/apps/meson.build
+++ b/apps/meson.build
@@ -1,3 +1,16 @@
+
+
+
+openGLDep = dependency('gl')
+glewDep = dependency('glew', required: true)
+gluDep = dependency('glu', required:true)
+glfwDep = dependency('glfw3', required: true)
+sdlDep = dependency('sdl2', required: true)
+xDep = dependency('x11', required: true)
+epoxyDep = dependency('epoxy', required: true)
+#glutDep = dependency('glut', required: true)
+
+
 libcamera_still = executable('libcamera-still', files('libcamera_still.cpp'),
                              include_directories : include_directories('..'),
                              dependencies: [libcamera_dep, boost_dep],
@@ -5,9 +18,9 @@ libcamera_still = executable('libcamera-still', files('libcamera_still.cpp'),
                              install : true)
 
 libcamera_vid = executable('libcamera-vid', files('libcamera_vid.cpp'),
-                           include_directories : include_directories('..'),
-                           dependencies: [libcamera_dep, boost_dep],
-                           link_with : libcamera_app,
+                           include_directories : include_directories('..', '../include'),
+                           dependencies: [libcamera_dep, boost_dep, gluDep, glewDep,  sdlDep, xDep, epoxyDep],
+                           link_with : [libcamera_app],
                            install : true)
 
 libcamera_hello = executable('libcamera-hello', files('libcamera_hello.cpp'),
