start getting sorting to compile

--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,7 @@ subdir('encoder')
 subdir('image')
 subdir('output')
 subdir('preview')
+subdir('find-peaks')
 subdir('post_processing_stages')
 subdir('utils')
 
