theoretical peak finding compiles

--- a/meson.build
+++ b/meson.build
@@ -30,6 +30,7 @@ elif neon == 'armv8-neon'
 endif
 
 libcamera_dep = dependency('libcamera', required : true)
+gsl_dep = dependency('gsl', required : true)
 
 summary({
             'location' : libcamera_dep.get_variable('libdir'),
@@ -38,7 +39,7 @@ summary({
         section : 'libcamera')
 
 libcamera_app_src = []
-libcamera_app_dep = [libcamera_dep]
+libcamera_app_dep = [libcamera_dep,gsl_dep]
 
 subdir('core')
 subdir('encoder')
